# drl-product-recommendation

./: .gitignore  MODEL_EXPLANATION.md  README.md  README_GAN_LOCAL.md  WORK_REPORT.md  baseline_model.py  baseline_model_improved.py  baseline_train.py  baseline_train_clean.py  baseline_train_improved.py  baseline_train_v2.py  data_preprocessing.py  drl_product_recommendation_train_val_test_colab_9_6.ipynb  eda_instacart.ipynb  evaluate_gan.py  pyproject.toml  requirements.txt  run_gan_local.py  train_gan.py  visualize_gan_results.py
baseline/: baseline_train.py  baseline_train_v3.py
data/: processed_summary.json  review.py
data/demo/: demo_data.json
demo/: app.js  build_demo_data.py  build_demo_data_fixed.py  index.html  styles.css
eda/: preprocessed.py
env/: recommendation_env.py
evaluation/: evaluate_baselines.py  evaluate_dqn.py  evaluate_mlp_common.py  evaluate_models_common.py  evaluate_recent_baseline.py  inspect_policy.py  metrics.py  run_test_suite.py  run_val_test_suite.py
models/: dqn_agent.py  dqn_model.py  dqn_weights.pth
notebooks/: data_exploration.ipynb  drl_product_recommendation_train_val_test_colab_9_6.ipynb  mlp_baseline_common_eval.ipynb
outputs/checkpoints/: best_smoke_selected.pth  dqn_pure_stable.pth  dqn_pure_stable_best.json  dqn_weights.pth  (+10 more)
recommender_gan/: __init__.py  data.py  metrics.py  models.py
results/: benchmark_summary.md
training/: test_agent.py  test_dqn.py  test_env.py  train_dqn.py
utils/: full_pass.py  inspect_data.py  split_history.py  split_history_train_val_test.py
visualization/: visualization.py
(+45 files in other folders)
