[project]
name = "instacart-drl"
version = "0.1.0"
description = "DQN recommender for Instacart Market Basket Analysis"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "matplotlib>=3.8.0",
  "torch>=2.3.0",
  "tqdm>=4.66.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

